# mogwai

examples/multipage/: Cargo.toml
examples/multipage/src/: api.rs  lib.rs  main.rs
examples/multipage/src/routes/: game_list.rs  mod.rs
