[package]
name = "multipage"
description = "A multipage SPA, maybe with SSR?"
license = "MIT"
repository = "https://github.com/schell/mogwai"
version = "0.1.0"
authors = ["Bryan Swift <bryan@bryanjswift.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "multipage-server"
path = "src/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.mogwai]
path = "../../mogwai"

[dependencies.mogwai-hydrator]
path = "../../crates/mogwai-hydrator"

[dependencies.uuid]
version = "0.8"
features = [
  "serde",
  "v4",
  "wasm-bindgen",
]

[dev-dependencies]
wasm-bindgen-test = "^0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "0.13" }
hyper-staticfile = { version = "0.5" }
lazy_static = { version = "1.4.0" }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tera = { version = "1" }
tokio = { version = "0.2", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }
console_log = "^0.1"
wasm-bindgen-futures = "^0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies.wasm-bindgen]
version = "^0.2"
features = [
  "serde-serialize",
]

[dependencies.web-sys]
version = "^0.3"
features = [
  "Headers",
  "History",
  "Location",
  "MouseEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
